kubernetes/manifests/backstage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      serviceAccountName: backstage-k8s-reader
      tolerations:
      - key: "nvidia.com/gpu"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
      - name: backstage
        image: europe-west4-docker.pkg.dev/meetup-ai/meetup-ai/backstage-custom:latest
        ports:
        - containerPort: 7007
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
          requests:
            memory: "512Mi"
            cpu: "250m"
        volumeMounts:
        - name: entities
          mountPath: /app/examples/entities.yaml
          subPath: entities.yaml
        - name: backstage-app-config
          mountPath: /app/app-config.yaml
          subPath: app-config.yaml
      volumes:
      - name: entities
        configMap:
          name: backstage-entities
      - name: backstage-app-config
        configMap:
          name: backstage-app-config
