kubernetes/manifests/backstage/pg-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage-postgres
  namespace: backstage
spec:
  selector:
    app: backstage-postgres
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
